// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavGroup Test > Snapshot > Active 1`] = `
<button
  aria-controls="generalMenu"
  aria-haspopup="false"
  class="BaseButton Item active"
  data-testid="bezier-nav-group"
  role="menuitem"
  type="button"
>
  <div
    class="LeftIconWrapper"
  >
    <svg
      class="Icon size-s margin"
      data-testid="bezier-nav-group-left-icon"
      fill="none"
      height="1em"
      style="--b-icon-color: var(--bgtxt-blue-normal);"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0"
        fill="currentColor"
        fill-rule="evenodd"
        style="fill: color(display-p3 .1922 .1961 .2039); fill-opacity: 1;"
      />
    </svg>
  </div>
  <span
    class="Text typo-14 truncated margin"
    data-testid="bezier-text"
  >
    test-content
  </span>
  <div
    class="RightContentWrapper"
  >
    <svg
      class="Icon size-xs margin"
      data-testid="bezier-icon"
      fill="none"
      height="1em"
      style="--b-icon-color: var(--bgtxt-orange-normal);"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0"
        fill="currentColor"
        fill-rule="evenodd"
        style="fill: color(display-p3 .1922 .1961 .2039); fill-opacity: 1;"
      />
    </svg>
  </div>
</button>
`;

exports[`NavGroup Test > Snapshot > Not active 1`] = `
<button
  aria-controls="generalMenu"
  aria-haspopup="false"
  class="BaseButton Item"
  data-testid="bezier-nav-group"
  role="menuitem"
  type="button"
>
  <div
    class="LeftIconWrapper"
  >
    <svg
      class="Icon size-s margin"
      data-testid="bezier-nav-group-left-icon"
      fill="none"
      height="1em"
      style="--b-icon-color: var(--txt-black-dark);"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0"
        fill="currentColor"
        fill-rule="evenodd"
        style="fill: color(display-p3 .1922 .1961 .2039); fill-opacity: 1;"
      />
    </svg>
  </div>
  <span
    class="Text typo-14 truncated margin"
    data-testid="bezier-text"
  >
    test-content
  </span>
  <div
    class="RightContentWrapper"
  >
    <svg
      class="Icon size-xs margin"
      data-testid="bezier-icon"
      fill="none"
      height="1em"
      style="--b-icon-color: var(--bgtxt-orange-normal);"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0"
        fill="currentColor"
        fill-rule="evenodd"
        style="fill: color(display-p3 .1922 .1961 .2039); fill-opacity: 1;"
      />
    </svg>
  </div>
</button>
`;
